name:                tunes-index
version:             0.1.0.0
homepage:            https://github.com/nkpart
author:              Nick Partridge
maintainer:          nkpart@gmail.com
copyright:           2017 Nick Partridge
category:            Web
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  default-language:    Haskell2010
  exposed-modules: 
    DrWho
    Extractor
    Extractor.Bands
    Extractor.Comps
    Extractor.Remedy
    Extractor.Util
    Page
    Types
    YouTube
    ISO8601Duration

  build-depends:
        base >= 3 && < 5
                       , containers
                       , text
                       , reducers
                       , wreq
                       , lens
                       , lens-aeson
                       , aeson
                       , mtl
                       , containers
                       , time
                       , directory
                       , lucid
                       , process
                       , pipes
                       , dlist
                       , transformers
                       , friendly-time

executable build
  main-is:             src/Build.hs
  default-language:    Haskell2010
  ghc-options:         -threaded -Wall -Werror
  build-depends:       base >= 4.7 && < 5
                       , tunes-index
                       , containers
                       , ansi-wl-pprint 
                       , text
                       , wreq
                       , lens
                       , lens-aeson
                       , aeson
                       , mtl
                       , containers
                       , time
                       , directory
                       , lucid
                       , process
                       , dlist
                       , transformers

test-suite test
  default-language: Haskell2010
  type: exitcode-stdio-1.0
  main-is: test.hs
  hs-source-dirs: test
  build-depends:
      base >= 3 && < 5
    , tunes-index
    , QuickCheck >= 2.9.2 && < 2.10
    , quickcheck-instances == 0.3.*                       
